--- a/PAiPWebPackageManager/PAiPWebPackageManager.csproj
+++ b/PAiPWebPackageManager/PAiPWebPackageManager.csproj
@@ -6,6 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+        <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -14,4 +18,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.*" />
+      <PackageReference Include="Spectre.Console" Version="0.46.*" />
+      <PackageReference Include="Spectre.Console.Json" Version="0.46.*" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    </ItemGroup>
 </Project>
