--- a/PAiPWebPackageManager/PAiPWebPackageManager.csproj
+++ b/PAiPWebPackageManager/PAiPWebPackageManager.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.*" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Spectre.Console" Version="0.46.*" />
       <PackageReference Include="Spectre.Console.Json" Version="0.46.*" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
