--- a/PAiPWebPackageManager/Dockerfile
+++ b/PAiPWebPackageManager/Dockerfile
@@ -10,9 +10,10 @@ WORKDIR "/src/PAiPWebPackageManager"
 RUN dotnet build "PAiPWebPackageManager.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "PAiPWebPackageManager.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "PAiPWebPackageManager.csproj" -c Release -o /app/publish /p:UseAppHost=true
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PAiPWebPackageManager.dll"]
+COPY --from=publish /app/publish/PAiPWebPackageManager ./pwpm
+ENTRYPOINT ["./PAiPWebPackageManager"]
